fix alignment for stat-squares

--- a/src/styles/stat-square.css
+++ b/src/styles/stat-square.css
@@ -54,7 +54,7 @@
 }
 
 .number {
-    margin-top: 20px;
+    margin-top: 30px;
     font-size: 36px;
     font-weight: 600;
     color:  #354052;
@@ -67,7 +67,7 @@
 }
 
 .context {
-    margin-top: 20px;
+    margin-top: 10px;
     width: 100%;
     display: flex;
     justify-content: center;
